VEES-20 | Fix overflow modal

--- a/src/shared/ui/Modal/ui/Base/base.module.scss
+++ b/src/shared/ui/Modal/ui/Base/base.module.scss
@@ -37,7 +37,7 @@
   }
 }
 
-body[data-closing="true"] {
+body[data-modal-closed="true"] {
   /* stylelint-disable-next-line no-descending-specificity */
   .title, .action {
     opacity: 0;
